Ya listo para que puedan leerlo

--- a/formularios.html
+++ b/formularios.html
@@ -8,7 +8,7 @@
     <body>
 
      <form method="post">
-        <input type="text" required="" value="Danner es un crack">     <!--De pone name= "" para nombrar la entrada de datos-->
+        <input type="text" required="" value="usuario">     <!--Se pone name= "" para nombrar la entrada de datos-->
         <input type="password" required="">
         <input type="number">
         <input type="email"> <br>
@@ -18,9 +18,10 @@
         <input type="time"> <br>
         <input type="button" value="boton">
         <input type="submit">
-        <textarea readonly=""> Hola como estas Danner querido </textarea>
+        <textarea readonly=""> Este es un tipo de contenedor de texto con la celda NO MODIFICABLE </textarea>
         <!--Readonly es para que solo se pueda leer y no modificar-->
-
+        <textarea > Este es un tipo de contenedor de texto con la celda MODIFICABLE </textarea>
+        <!--Sin readonly-->
      </form>
 
     </body>
