--- a/semantica/index.html
+++ b/semantica/index.html
@@ -38,7 +38,7 @@
         </aside>
         <footer>
             <h4>Copirigth - todos los derechos reservados</h4>
-            <p>Seguinos en nuestras <b>redes</b></p>
+            <p>No olvides seguirme en mis <b>redes</b></p>
             <a href="https://Instagram.com/que_tal_soy_dan/">Instagram</a>
             <a href="https://Instagram.com/que_tal_soy_dan/">Facebook</a>
             <a href="https://Instagram.com/que_tal_soy_dan/">Twiter</a>
