--- a/apuntes iniciales.html
+++ b/apuntes iniciales.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html>
+<!--Esta es la estructura basica para HTML-->
+
+<!DOCTYPE html> <!--Actualiza la version de HTML a la mas reciente-->
 <html>
-    <head>
+    <head>      <!--el "head" es la parte no visible en pantalla del codigo-->
         <title>segunda pagina-</title>
     </head>
-    <body>
-         <h1> Felicidade viniste a la segunda pagina</h1>   
-         <boton color="rojo" tamaño="grande" ></boton>
+    <body>      <!--En el body escribimos la estructura que aparecera en pantalla-->
+         <h1> H1 es el tipo de texto mas grande de html</h1>   
+         <boton color="rojo" tamaño="grande" >Boton rojo</boton>
 
         <imput> </imput>
 
         <br>
 
         <p>
-            Titulo
+            Este es el comando para escribir parrafos
         </p>    <br>
 
-        <a href="index.html">Volver</a>
+        <a href="index.html">Volver</a>  <!--"a" hace una referencia a otra hoja de HTML-->
         <!--Esto es para cuando el html esta una carpeta atras--> 
         <!-- <a href="../DISEÑO WEB/index.html">Volver</a> -->
 
